# Changelog

## [1.0.0]
- New engine
    - Real custom mappings & DPLCs
    - Custom art formats (including compression)
    - Sonic 2 Special Stage added [#21](/../../issues/21)
    - Sonic 3&K Sonic/Supersonic partial support
- New ASM parser/writer
- Added File tab
    - Create new files
    - Save/Load individual assets
    - Art offset [#15](/../../issues/15)
    - Blank entries in palette line
    - Various UX improvements for file input
- Rebuilt Project tab
    - Tree structure for projects
    - Reuse file menu
- Mapping tab updates
    - New mapping autodismiss is configurable
    - Added 'close' to new mapping / raw editor
- Sprites tab now autozooms depending on sprite size
- Fixed a keycombination event bug [#29](/../../issues/29)
- Fixed corrupted art when importing transparent PNGs [#22](/../../issues/22)
- Performance improvements to remove lag
- Created project files for s1disasm, s2disasm

## [0.0.8]
- Changed default palette from Sonic 2 to the SCH unified palette
- Fixed a bug that allows deleting mappings in drawing mode
- Fixed a bug where up/down scrolls when there are active mappings
- Fixed Kosinski-M compression
- Added KosinskiPlus compression
- Rebuilt colour picker

## [0.0.7]
- Added changelog
- Better error reporting & enabled devtools (F12)
- Compression now based on flamewing's mdcomp
    - Uses WASM and is much faster
    - Added ArtC42, LZKN1, Rocket and RLE compression formats
- Sort imported spritesheet into rows properly
- Autodismiss new mapping screen
- Tabs can be maximized
- Sprite swapping keyboard shortcuts added