@@ -13,6 +13,8 @@ const {
     signed,
 } = Flex2;
 
+// Flex2.parseASM(() => {});
+
 mappings([
     offsetTable(dc.w),
     [
